<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/home"
        android:textColor="@color/blue_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="20:00 AM" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_extralight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock"
        tools:text="monday 12/08/2022" />

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock" />


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:layout_margin="16dp"
        android:text="@string/set_alarm_and_see_world_clock"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analogClock" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/alarm_clock"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp" />

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/alarm_img"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp" />


            <Button
                android:id="@+id/button_see_alarm"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/see_more" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/world_clock2"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp" />

            <ImageView
                android:src="@drawable/world"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp" />


            <Button
                android:id="@+id/button_see_world"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/see_more" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>